policies/policy-1_validate-emptydir.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-emptydir-sizelimit
  annotations:
    policies.kyverno.io/title: Require Sizelimit for EmpyDir
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/description: >-
      When a Pod requests an emptyDir, by default it does not have a size limit which
      may allow it to consume excess or all of the space in the medium backing the volume.
      This can quickly overrun a Node and may result in a denial of service for other
      workloads. This policy validates if sizeLimit is set to all Pods mounting emptyDir
      volumes.    
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: validate-sizelimit
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      foreach:
      - list: "request.object.spec.volumes[]"
        deny:
          conditions:
            all:
              - key: "{{ element.name || '' }}"
                operator: AnyNotIn
                value: 
                - istio-envoy
                - istio-data
                - workload-certs
                - credential-socket
                - workload-socket
              - key: "{{element.keys(@)}}"
                operator: AnyIn
                value: emptyDir
                message: "A sizelimit for EmptyDir in volume {{ element.name }} is required"
              - key: "{{element.emptyDir.sizeLimit || '' }}"
                operator: Equals
                value: ''
