tests/policy-1/pod-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-fail
  namespace: test-emptydir
spec:
  containers:
  - name: sec-ctx-demo
    image: busybox
    command: [ "sh", "-c", "sleep 1h" ]
  volumes:
  - name: cache-volume-hh
    emptyDir: {}
