tests/policy-1/pod-success.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: test-emptydir
spec:
  containers:
  - name: sec-ctx-demo
    image: busybox 
    command: [ "sh", "-c", "sleep 1h" ]
  volumes:
  - name: cache-volume
    emptyDir: 
      sizeLimit: 100Mi
  - name: credential-socket
    emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-except
  namespace: test-emptydir
spec:
  containers:
  - name: sec-ctx-demo
    image: busybox 
    command: [ "sh", "-c", "sleep 1h" ]
  volumes:
  - name: credential-socket
    emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-no-volume
  namespace: test-emptydir
spec:
  containers:
  - name: sec-ctx-demo
    image: busybox 
    command: [ "sh", "-c", "sleep 1h" ]
