tests/policy-1/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-emptydir
policies:
  - ../../policies/policy-1_validate-emptydir.yaml
resources:
  - pod-success.yaml
  - pod-fail.yaml
results:
  - policy: require-emptydir-sizelimit
    rule: validate-sizelimit
    resources: 
      - test-emptydir/busybox
    kind: Pod
    result: pass
  - policy: require-emptydir-sizelimit
    rule: validate-sizelimit
    resources: 
      - test-emptydir/busybox-except
    kind: Pod
    result: pass
  - policy: require-emptydir-sizelimit
    rule: validate-sizelimit
    resources: 
      - test-emptydir/busybox-no-volume
    kind: Pod
    result: pass
  - policy: require-emptydir-sizelimit
    rule: validate-sizelimit
    resources:
      - test-emptydir/busybox-fail
    kind: Pod
    result: fail
